Modal without Tabulation focus

--- a/index.html
+++ b/index.html
@@ -9,5 +9,39 @@
 </head>
 <body>
     <h1>Tutoriel Modal</h1>
+    <a href="#modal1" class="js-modal">Ouvrir la boite modal</a>
+    <aside tabindex="0" id="modal1" class="modal" aria-hidden="true" role="dialog" aria-labelledby="title" style="display: none">
+        <div class="modal-wrapper js-modal-stop">
+            <button class="js-modal-close"><img width="40" src="./assets/img/close-1.svg" alt="Close button"></button>
+            <h1 id="title">You, a bobsleder!? That I'd like to see!</h1>
+<p>With gusto. I love you, buddy! I love you, buddy! The key to victory is discipline, and that means a well made bed. You will practice until you can make your bed in your sleep. OK, this has gotta stop. I'm going to remind Fry of his humanity the way only a woman can.</p>
+<p>Who are those horrible orange men? You know the worst thing about being a slave? <strong> They make you work, but they don't pay you or let you go.</strong> <em> You guys go on without me!</em> I'm going to go… look for more stuff to steal!</p>
+<h2>Enough about your promiscuous mother, Hermes! We have bigger problems.</h2>
+<input type="text">
+<p>Kif, I have mated with a woman. Inform the men. She also liked to shut up! This is the worst kind of discrimination: the kind against me! This is the worst kind of discrimination: the kind against me! Ugh, it's filthy! Why not create a National Endowment for Strip Clubs while we're at it?</p>
+<ol>
+<li><a href="#">Say what?</a></li><li><a href="#">Well I'da done better, but it's plum hard pleading a case while awaiting trial for that there incompetence.</a></li><li><a href="#">No, she'll probably make me do it.</a></li>
+</ol>
+
+<h3>Fry! Stay back! He's too powerful!</h3>
+<p>Who are you, my warranty?! You wouldn't. Ask anyway! Daddy Bender, we're hungry. Son, as your lawyer, I declare y'all are in a 12-piece bucket o' trouble. But I done struck you a deal: Five hours of community service cleanin' up that ol' mess you caused.</p>
+<ul>
+<li>That's the ONLY thing about being a slave.</li><li>The alien mothership is in orbit here. If we can hit that bullseye, the rest of the dominoes will fall like a house of cards. Checkmate.</li><li>You guys realize you live in a sewer, right?</li>
+</ul>
+
+<p>Doomsday device? Ah, now the ball's in Farnsworth's court! Whoa a real live robot; or is that some kind of cheesy New Year's costume? Do a flip! I found what I need. And it's not friends, it's things. I haven't felt much of anything since my guinea pig died.</p>
+<p>Ah, yes! John Quincy Adding Machine. He struck a chord with the voters when he pledged not to go on a killing spree. Ah, the 'Breakfast Club' soundtrack! I can't wait til I'm old enough to feel ways about stuff!</p>
+<p>And I'd do it again! And perhaps a third time! But that would be it. Large bet on myself in round one. And why did 'I' have to take a cab? Are you crazy? I can't swallow that. Now what? Who are those horrible orange men?</p>
+<p>You wouldn't. Ask anyway! Yeah. Give a little credit to our public schools. Yeah. Give a little credit to our public schools. What's with you kids? Every other day it's food, food, food. Alright, I'll get you some stupid food.</p>
+<p>THE BIG BRAIN AM WINNING AGAIN! I AM THE GREETEST! NOW I AM LEAVING EARTH, FOR NO RAISEN! I just told you! You've killed me! Oh, I think we should just stay friends. And then the battle's not so bad? Oh, I always feared he might run off like this. Why, why, why didn't I break his legs?</p>
+<p>Daddy Bender, we're hungry. We're rescuing ya. This is the worst kind of discrimination: the kind against me! And from now on you're all named Bender Jr.</p>
+<p>This opera's as lousy as it is brilliant! Your lyrics lack subtlety. You can't just have your characters announce how they feel. That makes me feel angry! Yes, I saw. You were doing well, until everyone died.</p>
+<p>Bender, I didn't know you liked cooking. That's so cute. Yes, except the Dave Matthews Band doesn't rock. They're like sex, except I'm having them! Is that a cooking show? That's not soon enough!</p>
+<p>For the last time, I don't like lilacs! Your 'first' wife was the one who liked lilacs! I'm Santa Claus! Then we'll go with that data file! You don't know how to do any of those.</p>
+<p>You wouldn't. Ask anyway! Hey, what kinda party is this? There's no booze and only one hooker. Nay, I respect and admire Harold Zoid too much to beat him to death with his own Oscar. Guards! Bring me the forms I need to fill out to have her taken away!</p>
+<p>I wish! It's a nickel. Alright, let's mafia things up a bit. Joey, burn down the ship. Clamps, burn down the crew. Can we have Bender Burgers again? Oh dear! She's stuck in an infinite loop, and he's an idiot! Well, that's love for you.</p>
+        </div>
+    </aside>
+    <script src="./assets/js/app.js"></script>
 </body>
 </html>
