Add tabulation for accessibilty All directions

--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
 <body>
     <h1>Tutoriel Modal</h1>
     <a href="#modal1" class="js-modal">Ouvrir la boite modal</a>
-    <aside tabindex="0" id="modal1" class="modal" aria-hidden="true" role="dialog" aria-labelledby="title" style="display: none">
+    <a href="https://grafikart.fr">Grafikart</a>
+    <aside id="modal1" class="modal" aria-hidden="true" role="dialog" aria-labelledby="title" style="display: none">
         <div class="modal-wrapper js-modal-stop">
+            <button class="btn">Fermer la boite modal</button>
             <button class="js-modal-close"><img width="40" src="./assets/img/close-1.svg" alt="Close button"></button>
             <h1 id="title">You, a bobsleder!? That I'd like to see!</h1>
 <p>With gusto. I love you, buddy! I love you, buddy! The key to victory is discipline, and that means a well made bed. You will practice until you can make your bed in your sleep. OK, this has gotta stop. I'm going to remind Fry of his humanity the way only a woman can.</p>
