Add the AJAX loading Modal

--- a/modal.html
+++ b/modal.html
@@ -8,14 +8,12 @@
     <title>Faire une fenetre modal</title>
 </head>
 <body>
-    <h1>Tutoriel Modal</h1>
-    <a href="#modal1" class="js-modal">Ouvrir la boite modal</a>
-    <a href="./modal.html#modal2" class="js-modal">Ouvrir en AJAX</a>
-    <aside id="modal1" class="modal" aria-hidden="true" role="dialog" aria-labelledby="title" style="display: none">
+    <!-- On enlve le display:none et le aria-hidden="true" on le met à false pour que la modal puisse etre consulter meme dans une nouvelle onglet -->
+    <aside id="modal2" class="modal" aria-hidden="false" role="dialog" aria-labelledby="title" style="color:rgb(102, 102, 241)">
         <div class="modal-wrapper js-modal-stop">
             <button class="btn">Fermer la boite modal</button>
             <button class="js-modal-close"><img width="40" src="./assets/img/close-1.svg" alt="Close button"></button>
-            <h1 id="title">You, a bobsleder!? That I'd like to see!</h1>
+            <h1 id="title">Je suis une fenetre modal charger en AJAX</h1>
 <p>With gusto. I love you, buddy! I love you, buddy! The key to victory is discipline, and that means a well made bed. You will practice until you can make your bed in your sleep. OK, this has gotta stop. I'm going to remind Fry of his humanity the way only a woman can.</p>
 <p>Who are those horrible orange men? You know the worst thing about being a slave? <strong> They make you work, but they don't pay you or let you go.</strong> <em> You guys go on without me!</em> I'm going to go… look for more stuff to steal!</p>
 <h2>Enough about your promiscuous mother, Hermes! We have bigger problems.</h2>
